<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >
 <TextView 
     	android:layout_marginTop="40dip"
     	android:gravity="center"
     	android:id="@+id/text3"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/title"
	    android:textSize="30sp"
    />
  <TextView 
      android:layout_marginTop="10dip"
       android:gravity="center"
	   android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:id="@+id/text1"
	   android:textSize="20sp"
   />
  
  
  <LinearLayout 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:layout_marginTop="10dip"
      
      >
      <TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textSize="20sp"
	    android:text="@string/model1"
	    android:id="@+id/text2"
   		 />
      <EditText 
         android:textSize="20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editText"
          />
      
  </LinearLayout>

<LinearLayout 
    android:layout_marginTop="10dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    >
      <Button 
	      android:id="@+id/again"
	      android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:text="@string/again1"
      />  
      <Button 
	      android:id="@+id/open"
	      android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:text="@string/ok"
      />  
    
</LinearLayout>

  <TextView 
      android:gravity="left"
	   android:layout_marginTop="10dip"
	   android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:layout_marginLeft="5dp"
	   android:layout_marginRight="5dp"
	   android:textColor="#993366"	   
	   android:textSize="10sp"
	   android:text="@string/tip"
  />
  
    <RelativeLayout
        android:id="@+id/adonContainerView"
        android:layout_marginTop="250dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" >
    </RelativeLayout>
</LinearLayout>
